--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://kit.fontawesome.com/5e271a68bd.js" crossorigin="anonymous"></script>
+    <!-- Go Here: http://labs.bible.org/NETBibleTagger to add this to your site. -->
+    <script type="text/javascript" defer="defer" src="https://labs.bible.org/api/NETBibleTagger/v2/netbibletagger.js">
+    </script>
   </body>
 </html>
